fix(ui-kit): fix Select text container alignment

--- a/packages/ui-kit/src/Select/components/SelectButton/style.module.css
+++ b/packages/ui-kit/src/Select/components/SelectButton/style.module.css
@@ -86,6 +86,7 @@
     & .textContent {
       overflow: hidden;
       text-overflow: ellipsis;
+      display: flex;
     }
   }
 
